# climax-ews

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
data/: demo_features.csv
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DPG-Checklist.md  ROADMAP.md  SECURITY.md  data-sheet.md  model-card.md  ownership.md  privacy-security.md  risk-assessment.md  standards.md
src/climax_ews/: __init__.py  llm_alerts.py  run_pipeline.py  utils.py
